[gd_scene load_steps=4 format=3 uid="uid://o1tqj7m7eud6"]

[ext_resource type="Texture2D" uid="uid://brwpcrkjl8sbt" path="res://icon.svg" id="1_hx7tk"]
[ext_resource type="Script" path="res://scenes/eco/resource.gd" id="1_m7e4v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v47g5"]
size = Vector2(38, 38)

[node name="Resource" type="Node2D"]
z_index = 1
script = ExtResource("1_m7e4v")

[node name="StaticBody2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_hx7tk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_v47g5")

[connection signal="body_entered" from="StaticBody2D" to="." method="_on_static_body_2d_body_entered"]
[connection signal="body_exited" from="StaticBody2D" to="." method="_on_static_body_2d_body_exited"]
[connection signal="input_event" from="StaticBody2D" to="." method="_on_static_body_2d_input_event"]
